<resources>
    <string name="app_name">tapas assignment</string>
    <string name="book_cover">book cover</string>
    <string name="back">back</string>
    <string name="like">like</string>
    <string name="loading">Loading</string>
    <string name="invalid_access_message">"잘못된 접근입니다."</string>
    <string name="common_error_message">다시 시도 해주세요.</string>
    <string name="total_episodes">%d episodes</string>
    <string name="scene_episode">%d episode</string>
    <string name="episode_thumbnail">episode thumbnail</string>
    <string name="view_count">view count</string>
    <string name="like_count">like count</string>
    <string name="subscribe_count">subscribe count</string>
    <string name="episodes">Episodes</string>
</resources>