<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:theme="@null"
            app:title=""
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_series_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#33000000"
                app:layout_collapseMode="parallax">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_series"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/view_dummy"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_book_cover"
                        android:layout_width="100dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintDimensionRatio="1:1.5"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintTop_toBottomOf="@+id/view_dummy"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:cardCornerRadius="6dp">

                        <ImageView
                            android:id="@+id/image_book_cover"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/book_cover"
                            android:background="@drawable/shape_default_image"/>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/text_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:paddingTop="1dp"
                        android:paddingBottom="4dp"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:background="@drawable/shape_genre_white"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16dp"
                        app:layout_constraintTop_toTopOf="@+id/card_book_cover"
                        app:layout_constraintStart_toEndOf="@+id/card_book_cover"
                        tools:text="genre"/>

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintTop_toBottomOf="@+id/text_genre"
                        app:layout_constraintStart_toStartOf="@+id/text_genre"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="series title"/>

                    <TextView
                        android:id="@+id/text_creator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintTop_toBottomOf="@+id/text_title"
                        app:layout_constraintStart_toStartOf="@+id/text_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="series title"/>

                    <ImageView
                        android:id="@+id/image_view_count"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:contentDescription="@string/view_count"
                        app:layout_constraintVertical_bias="0"
                        app:layout_constraintTop_toBottomOf="@+id/text_creator"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/text_creator"
                        app:srcCompat="@drawable/ic_view"
                        app:tint="@color/white"/>

                    <TextView
                        android:id="@+id/text_view_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintTop_toTopOf="@+id/image_view_count"
                        app:layout_constraintBottom_toBottomOf="@+id/image_view_count"
                        app:layout_constraintStart_toEndOf="@+id/image_view_count"
                        tools:text="100k"/>

                    <ImageView
                        android:id="@+id/image_like_count"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/like_count"
                        app:layout_constraintTop_toTopOf="@+id/image_view_count"
                        app:layout_constraintBottom_toBottomOf="@+id/image_view_count"
                        app:layout_constraintStart_toEndOf="@+id/text_view_count"
                        app:srcCompat="@drawable/ic_like"
                        app:tint="@color/white"/>

                    <TextView
                        android:id="@+id/text_like_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintTop_toTopOf="@+id/image_like_count"
                        app:layout_constraintBottom_toBottomOf="@+id/image_like_count"
                        app:layout_constraintStart_toEndOf="@+id/image_like_count"
                        tools:text="100k"/>

                    <ImageView
                        android:id="@+id/image_subscribe_count"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/subscribe_count"
                        app:layout_constraintTop_toTopOf="@+id/text_like_count"
                        app:layout_constraintBottom_toBottomOf="@+id/text_like_count"
                        app:layout_constraintStart_toEndOf="@+id/text_like_count"
                        app:srcCompat="@drawable/ic_bookmark"
                        app:tint="@color/white"/>

                    <TextView
                        android:id="@+id/text_subscribe_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintTop_toTopOf="@+id/image_subscribe_count"
                        app:layout_constraintBottom_toBottomOf="@+id/image_subscribe_count"
                        app:layout_constraintStart_toEndOf="@+id/image_subscribe_count"
                        tools:text="100k"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_top"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/image_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:background="?attr/actionBarItemBackground"
                        android:padding="10dp"
                        android:contentDescription="@string/back"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_back"/>

                    <ImageButton
                        android:id="@+id/image_dummy_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:padding="10dp"
                        android:visibility="invisible"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_back"/>

                    <TextView
                        android:id="@+id/text_toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:visibility="invisible"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_back"
                        app:layout_constraintEnd_toStartOf="@+id/image_dummy_menu"
                        tools:text="title"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin">

            <TextView
                android:id="@+id/text_tab_episode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="40dp"
                android:text="@string/episodes"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/text_tab_episode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_tab_episode"
                app:layout_constraintEnd_toEndOf="@+id/text_tab_episode"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/text_episode_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="23 Episodes"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_episode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:overScrollMode="never"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@+id/text_episode_count"
                tools:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/list_item_episode"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>